@@ -3447,9 +3447,6 @@ PrintParse(
 	case TCL_TOKEN_TEXT:
 	    typeString = "text";
 	    break;
-	case TCL_TOKEN_UNCOLLAPSED_TEXT:
-	    typeString = "text-to-collapse";
-	    break;
 	case TCL_TOKEN_BS:
 	    typeString = "backslash";
 	    break;
